# PointzAlive

./: .gitignore  CMakeLists.txt  Makefile  README.md  changelog.txt
PointzAlive/: CMakeLists.txt  imgui.ini  main.cpp  template_game.cpp
PointzAlive/games/nogame/: CMakeLists.txt  gameInfo.cmake  nogame.cpp  nogame.h
PointzAlive/lib/: Game.h  GameSelector.h  Point.h  Space.h  map.h  pointzalive_core.h
PointzAlive/lib/_games/: BallPit.h  gravitator2.h  life_game2.h  nogame.h
PointzAlive/lib/common_include/: Point.h  Space.h  _CMakeLists.txt  template_game.h
PointzAlive/lib/games/: BallPit.h  gravitator.h  gravitator2.h  life_game.h  life_game2.h  nogame.h
PointzAlive/utils/cmake/: Functions.cmake  colors.cmake  macros.cmake
PointzAlive/utils/files/: PA_Game_Selection.h.in  PA_Headers.h.in
ProgramNameExample/: EntryPointExample.cpp  EntryPointExample.h  main.cpp
Release/: imgui.ini
